third_party/move/move-compiler-v2/tests/checking/typing/bind_unpack_references_invalid.exp

Diagnostics:
error: expected `integer` but found `&u64`
  ┌─ tests/checking/typing/bind_unpack_references_invalid.move:7:9
  │
7 │         f = 0;
  │         ^

error: expected `&M::S` but found `M::S`
  ┌─ tests/checking/typing/bind_unpack_references_invalid.move:8:9
  │
8 │         s2 = S { f: 0 }
  │         ^^

error: expected `integer` but found `&mut u64`
   ┌─ tests/checking/typing/bind_unpack_references_invalid.move:13:9
   │
13 │         f = 0;
   │         ^

error: expected `&mut M::S` but found `M::S`
   ┌─ tests/checking/typing/bind_unpack_references_invalid.move:14:9
   │
14 │         s2 = S { f: 0 }
   │         ^^

error: mutability mismatch (&mut != &)
   ┌─ tests/checking/typing/bind_unpack_references_invalid.move:20:9
   │
20 │         f = &0;
   │         ^

error: mutability mismatch (&mut != &)
   ┌─ tests/checking/typing/bind_unpack_references_invalid.move:21:9
   │
21 │         s2 = &S { f: 0 }
   │         ^^
